// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an AddressForm component 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="body"
  >
    <h2
      className="heading"
    >
      Shipping Address
    </h2>
    <div
      className="validationMessage"
    >
      
    </div>
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="firstname"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="lastname"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="email"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="email"
        >
          Email
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street0"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street0"
        >
          Street
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="street0"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="city"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region_code"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="region_code"
        >
          State
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="region_code"
              name="region_code"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="postcode"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="postcode"
        >
          ZIP
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="postcode"
              name="postcode"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="telephone"
        >
          Phone
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="telephone"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_highPriority"
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span
        className="content"
      >
        Use Address
      </span>
    </button>
    <button
      className="root_lowPriority"
      disabled={false}
      onClick={[MockFunction]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
  </div>
</form>
`;

exports[`renders validation block with message if address is incorrect 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="body"
  >
    <h2
      className="heading"
    >
      Shipping Address
    </h2>
    <div
      className="validationMessage"
    >
      Oops
    </div>
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="firstname"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="lastname"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="email"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="email"
        >
          Email
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street0"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street0"
        >
          Street
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="street0"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="city"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region_code"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="region_code"
        >
          State
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="region_code"
              name="region_code"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="postcode"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="postcode"
        >
          ZIP
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="postcode"
              name="postcode"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="telephone"
        >
          Phone
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="telephone"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            aria-hidden="false"
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
  </div>
  <div
    className="footer"
  >
    <button
      className="root_highPriority"
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span
        className="content"
      >
        Use Address
      </span>
    </button>
    <button
      className="root_lowPriority"
      disabled={false}
      onClick={[MockFunction]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
  </div>
</form>
`;
